<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Numline</string>
    <string name="action_settings">Settings</string>
    <string name="TextView1"></string>
    <string name="TextView2"></string>
    <string name="TextView3"></string>
    <string name="Button1">OK</string>
    <string name="Button2">Once Again</string>
    <string name="Button3">Quit</string>
    <string name="TextView4"></string>
    <string name="title_activity_num_jump">NumJumpActivity</string>
    
    
    
    <string name="efnum">Enter Integer</string>
    <string name="esign">Enter Plus or Minus Sign</string>
    <string name="esnum">Enter Integer (\u003c10)</string>
    

</resources>